--- a/osu.Framework/osu.Framework.csproj
+++ b/osu.Framework/osu.Framework.csproj
@@ -102,6 +102,21 @@
     <Compile Include="Extensions\IEnumerableExtensions\IEnumerableExtensions.cs" />
     <Compile Include="GameModes\Testing\TestBrowser.cs" />
     <Compile Include="GameModes\Testing\TestCase.cs" />
+    <Compile Include="Graphics3D\Camera.cs" />
+    <Compile Include="Graphics3D\Container.cs" />
+    <Compile Include="Graphics3D\ContainerDrawNode.cs" />
+    <Compile Include="Graphics3D\Drawable.cs" />
+    <Compile Include="Graphics3D\Drawable_TransformationHelpers.cs" />
+    <Compile Include="Graphics3D\DrawNode.cs" />
+    <Compile Include="Graphics3D\SceneRoot.cs" />
+    <Compile Include="Graphics3D\SceneRootDrawNode.cs" />
+    <Compile Include="Graphics3D\Sprite.cs" />
+    <Compile Include="Graphics3D\SpriteDrawNode.cs" />
+    <Compile Include="Graphics3D\Transformations\TransformPosition.cs" />
+    <Compile Include="Graphics3D\Transformations\TransformPositionZ.cs" />
+    <Compile Include="Graphics3D\Transformations\TransformRotation.cs" />
+    <Compile Include="Graphics3D\Transformations\TransformScale.cs" />
+    <Compile Include="Graphics3D\Transformations\TransformVector3D.cs" />
     <Compile Include="Graphics\BlendingInfo.cs" />
     <Compile Include="Graphics\Colour\ColourInfo.cs" />
     <Compile Include="Graphics\Colour\SRGBColour.cs" />
@@ -115,6 +130,7 @@
     <Compile Include="Graphics\Containers\ContainerDrawNode.cs" />
     <Compile Include="Graphics\Cursor\CursorContainer.cs" />
     <Compile Include="Graphics\IDrawable.cs" />
+    <Compile Include="Graphics\Transformations\ITransformable.cs" />
     <Compile Include="Graphics\ProxyDrawable.cs" />
     <Compile Include="Graphics\Sprites\Box.cs" />
     <Compile Include="Graphics\OpenGL\Textures\TextureGLAtlas.cs" />
@@ -142,7 +158,7 @@
     <Compile Include="Graphics\Transformations\TransformPositionX.cs" />
     <Compile Include="Graphics\Transformations\TransformPositionY.cs" />
     <Compile Include="Graphics\Transformations\TransformRotation.cs" />
-    <Compile Include="Graphics\Transformations\TransformVector.cs" />
+    <Compile Include="Graphics\Transformations\TransformVector2D.cs" />
     <Compile Include="Graphics\Transformations\TransformScale.cs" />
     <Compile Include="Graphics\UserInterface\Button.cs" />
     <Compile Include="Graphics\UserInterface\TextBox.cs" />
@@ -302,6 +318,7 @@
     <EmbeddedResource Include="Resources\Fonts\OpenSans_1.png" />
     <EmbeddedResource Include="Resources\Fonts\OpenSans_0.png" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
